package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.trip.station.boundary.control.entity

import java.util.*

data class StationId(val id: UUID)