package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.trip.train.boundary.control.entity

import java.util.*

data class TrainId(val id: UUID)