package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.trip.train.wagon.boundary.control.entity

import java.util.*

data class WagonId(val id: UUID)